# internal/web/tasks/api.gen.go
@@ -21,9 +21,10 @@ type Error struct {
 
 // Task defines model for Task.
 type Task struct {
-	Id     *uint   `gorm:"primaryKey" json:"id"`
-	Task   *string `json:"task"`
-	IsDone *bool   `json:"is_done"`
+	Id     *uint   `json:"id,omitempty"`
+	Task   *string `json:"task,omitempty"`
+	IsDone *bool   `json:"is_done,omitempty"`
+	UserId *uint   `json:"user_id,omitempty"`
 }
 
 // TaskUpdate defines model for TaskUpdate.
@@ -51,6 +52,9 @@ type ServerInterface interface {
 	// Update a task by ID
 	// (PATCH /tasks/{id})
 	PatchTask(ctx echo.Context, id string) error
+	// Get tasks for a specific user
+	// (GET /users/{user_id}/tasks)
+	GetUsersUserIdTasks(ctx echo.Context, userId uint) error
 }
 
 // ServerInterfaceWrapper converts echo contexts to parameters.
@@ -108,6 +112,22 @@ func (w *ServerInterfaceWrapper) PatchTask(ctx echo.Context) error {
 	return err
 }
 
+// GetUsersUserIdTasks converts echo context to params.
+func (w *ServerInterfaceWrapper) GetUsersUserIdTasks(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "user_id" -------------
+	var userId uint
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "user_id", runtime.ParamLocationPath, ctx.Param("user_id"), &userId)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter user_id: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.GetUsersUserIdTasks(ctx, userId)
+	return err
+}
+
 // This is a simple interface which specifies echo.Route addition functions which
 // are present on both echo.Echo and echo.Group, since we want to allow using
 // either of them for path registration
@@ -140,6 +160,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	router.POST(baseURL+"/tasks", wrapper.PostTasks)
 	router.DELETE(baseURL+"/tasks/:id", wrapper.DeleteTask)
 	router.PATCH(baseURL+"/tasks/:id", wrapper.PatchTask)
+	router.GET(baseURL+"/users/:user_id/tasks", wrapper.GetUsersUserIdTasks)
 
 }
 
@@ -228,6 +249,23 @@ func (response PatchTask400JSONResponse) VisitPatchTaskResponse(w http.ResponseW
 	return json.NewEncoder(w).Encode(response)
 }
 
+type GetUsersUserIdTasksRequestObject struct {
+	UserId uint `json:"user_id"`
+}
+
+type GetUsersUserIdTasksResponseObject interface {
+	VisitGetUsersUserIdTasksResponse(w http.ResponseWriter) error
+}
+
+type GetUsersUserIdTasks200JSONResponse []Task
+
+func (response GetUsersUserIdTasks200JSONResponse) VisitGetUsersUserIdTasksResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(200)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
 // StrictServerInterface represents all server handlers.
 type StrictServerInterface interface {
 	// Get all tasks
@@ -242,6 +280,9 @@ type StrictServerInterface interface {
 	// Update a task by ID
 	// (PATCH /tasks/{id})
 	PatchTask(ctx context.Context, request PatchTaskRequestObject) (PatchTaskResponseObject, error)
+	// Get tasks for a specific user
+	// (GET /users/{user_id}/tasks)
+	GetUsersUserIdTasks(ctx context.Context, request GetUsersUserIdTasksRequestObject) (GetUsersUserIdTasksResponseObject, error)
 }
 
 type StrictHandlerFunc = strictecho.StrictEchoHandlerFunc
@@ -358,6 +399,31 @@ func (sh *strictHandler) PatchTask(ctx echo.Context, id string) error {
 		return err
 	} else if validResponse, ok := response.(PatchTaskResponseObject); ok {
 		return validResponse.VisitPatchTaskResponse(ctx.Response())
+	} else if response != nil {
+		return fmt.Errorf("unexpected response type: %T", response)
+	}
+	return nil
+}
+
+// GetUsersUserIdTasks operation middleware
+func (sh *strictHandler) GetUsersUserIdTasks(ctx echo.Context, userId uint) error {
+	var request GetUsersUserIdTasksRequestObject
+
+	request.UserId = userId
+
+	handler := func(ctx echo.Context, request interface{}) (interface{}, error) {
+		return sh.ssi.GetUsersUserIdTasks(ctx.Request().Context(), request.(GetUsersUserIdTasksRequestObject))
+	}
+	for _, middleware := range sh.middlewares {
+		handler = middleware(handler, "GetUsersUserIdTasks")
+	}
+
+	response, err := handler(ctx, request)
+
+	if err != nil {
+		return err
+	} else if validResponse, ok := response.(GetUsersUserIdTasksResponseObject); ok {
+		return validResponse.VisitGetUsersUserIdTasksResponse(ctx.Response())
 	} else if response != nil {
 		return fmt.Errorf("unexpected response type: %T", response)
 	}
